k8snginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3  # Number of NGINX pods you want
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: my-nginx-image:v1  # Use the image name and tag created earlier
          ports:
            - containerPort: 80  # Port exposed by NGINX
